<resources>
    <string name="app_name">Third Eye</string>
    <string name="title_activity_main">Third Eye</string>
    <string name="menu_settings">Settings</string>
    <string name="mainWelcome"> epic duwara banaye   gaye Third Eye sewa me aapka swaagat hay  . Sewa chunne ke liye upar aur neeche swipe karein  , aur select karne ke liye right or swipe karein . Yadi aapke device me physical keyboard hay , to Arrow Keys ka prayog karein. </string>
    <string name="mainMessages">SMS</string>
    <string name="mainMessagesNew">Naye Messages</string>
    <string name="mainMessagesNoNew">Messages. Koi naya message nahi hay.</string>
    <string name="mainMessagesOneNew">Messages. Ek naya message.</string>
    <string name="mainMessagesNewFromContact">&#160; ke dwara naya message</string>
    <string name="mainMessagesNewFromUnknown">Unknown Number dwara naya message</string>
    <string name="mainMessagesNotAvailable">Messages. iss device me messaging ki suvidha uplabdh nahi hay.</string>
    <string name="mainCalls">Calls</string>
    <string name="mainCallsMissed">missed calls</string>
    <string name="mainCallsNoMissed">Calls. Koi missed call nahi hay.</string>
    <string name="mainCallsOneMissed">Calls. Ek missed call hay.</string>
    <string name="mainCallsNotAvailable">Calls. iss device me calling ki suvidha uplabdh nahi hay.</string>
    <string name="mainNotAvailable">Ye option uplabdh nahi hay.</string>
    <string name="mainContacts">Contacts</string>
    <string name="mainMusicPlayer">Music</string>
    <string name="mainBrowser">Internet</string>
    <string name="mainAlarms">Alarms</string>
    <string name="mainAlarmsNoAlarms">Alarms. Aaj ke liye koi alarm nahi hay.</string>
    <string name="mainAlarmsOneAlarm">Alarms. Aaj ke liye ek alarm hay.</string>
    <string name="mainAlarmsForToday">Aaj ke liye &#160; alarms hay.</string>
    <string name="mainVoiceRecorder">Recorder</string>
    <string name="mainApplications">Applications</string>
    <string name="mainSettings">Settings</string>
    <string name="mainStatus">Device status</string>
    <string name="mainCarrierIs">, &#160; mobile sewa activated hay </string>
    <string name="mainProfileIsNormal">, normal profile activated hay&#160;</string>
    <string name="mainProfileIsSilent">, silent profile activated hay&#160;</string>
    <string name="mainProfileIsVibrate">, vibrate profile activated hay&#160;</string>
    <string name="mainNoSignal">, there is no phone signal&#160;</string>
    <string name="mainBatteryChargedAt">Battery &#160; charged hay</string>
    <string name="mainPercentAndTime">&#160;percent, the time is&#160;</string>
    <string name="mainHours">&#160;hours&#160;</string>
    <string name="mainMinutesAndDate">&#160;minutes and the date is&#160;</string>
    <string name="mainOf">&#160;of&#160;</string>
    <string name="mainCarrierNotAvailable">Unknown</string>
    <string name="mainWifiOnWithNetwork">aur wifi on hay aur &#160; network pe connected hay</string>
    <string name="mainWifiOnWithoutNetwork">aur wifi on hay par kisi network pe connected nahi hay</string>
    <string name="mainWifiOff">aur wifi off hay.</string>
    <string name="mainMusicPlayerPleaseTryAgain">Kripya thodi der baad koshish karein abhi media files process ho rahin</string>
    <string name="mainNoTTSInstalledTitle">Error</string>
    <string name="mainNoTTSInstalledMessage">TTS software uplabhdah nhi hai.\nkripya  Google TTS App (free App) download karein .</string>
    <string name="mainNoTTSInstalledButton">Download Google TTS</string>
    <string name="mainPressBack">App close karne ke liye back phir se dabaye.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="volumeMaximum">Maximum volume</string>
    <string name="volumeHigher">Higher volume</string>
    <string name="volumeLower">Lower volume</string>
    <string name="deviceCharged">Device ab poori tarah charged hay</string>
    <string name="deviceChargedStatus">, Device poori tarah charged hay,&#160;</string>
    <string name="deviceCharging">Device charge ho raha hay</string>
    <string name="deviceChargingStatus">, Device charge ho raha hay ,&#160;</string>
    <string name="deviceUnplugged">Device ko unplug kiya gaya hay</string>
    <string name="screenOn">Screen abhi on hay</string>
    <string name="screenOff">Screen abhi off hay</string>
    <string name="screenPortrait">Screen ki orientation abhi potrait hay</string>
    <string name="screenLandscape">Screen ki orientation abhi Landscape hay</string>
    <string name="wifiConnectedToNetwork">Device abhi &#160; wifi network par connected hay</string>
    <string name="wifiDisconnectedFromNetwork">Device wifi network se disconnected hay</string>
    <string name="layoutMainMessages">SMS</string>
    <string name="layoutMainCalls">Calls</string>
    <string name="layoutMainContacts">Contacts</string>
    <string name="layoutMainMusic">Music</string>
    <string name="layoutMainBrowser">Internet</string>
    <string name="layoutMainAlarms">Alarms</string>
    <string name="layoutMainSettings">Settings</string>
    <string name="layoutMainStatus">Status</string>
    <string name="layoutMainOnResume">Ab aap main menu par hay</string>
    <string name="layoutAlarmsNotifierShutdown">Alarm band karne ke liye upar ya neeche slide kijiye</string>
    <string name="layoutAlarmsList">Alarm ki list</string>
    <string name="layoutAlarmsCreate">Naya alarm set karein</string>
    <string name="layoutAlarmsAlarmCreated">Alarm set ho chuka hay, ab aap alarms menu par hay</string>
    <string name="layoutAlarmsOnResume">Ab aap alarms menu par hay</string>
    <string name="layoutAlarmsCreateMessage">- input message -</string>
    <string name="layoutAlarmsCreateMessage2">Alarm message. Input message daalne ke liye right side slide karein.</string>
    <string name="layoutAlarmsCreateMessage3">Alarm message:\n</string>
    <string name="layoutAlarmsCreateMessage4">Alarm message.&#160;</string>
    <string name="layoutAlarmsCreateCreate">Alarm Banayein</string>
    <string name="layoutAlarmsCreateDay">Day alarm:&#160;</string>
    <string name="layoutAlarmsCreateDay2">Day alarm.&#160;</string>
    <string name="layoutAlarmsCreateTimeHour">Alarm hours:&#160;</string>
    <string name="layoutAlarmsCreateTimeHour2">Alarm hours.&#160;</string>
    <string name="layoutAlarmsCreateTimeMinute">Alarm minutes:&#160;</string>
    <string name="layoutAlarmsCreateTimeMinute2">Alarm minutes.&#160;</string>
    <string name="layoutAlarmsCreateHours">&#160;hours</string>
    <string name="layoutAlarmsCreateMinutes">&#160;minutes</string>
    <string name="layoutAlarmsCreateErrorNoMessage">Kripya ek alarm message daaliye</string>
    <string name="layoutAlarmsCreateErrorAlarmConflict">Isi samay ke liye ek doosra alarm bhi set hay. kripya fir se try karein</string>
    <string name="layoutAlarmsCreateOnResume">Ab aap alarm create karne ke menu par hay</string>
    <string name="layoutAlarmsListNoAlarms">Koi alarms nahi hay</string>
    <string name="layoutAlarmsListList">Alarms</string>
    <string name="layoutAlarmsListAlarmAlarmsCount">&#160; alarm set ho chuke hay</string>
    <string name="layoutAlarmsListAt">&#160;at&#160;</string>
    <string name="layoutAlarmsListForToday">&#160; aaj ke liye. Saare sunnee ke liye right side swipe karein.</string>
    <string name="layoutAlarmsListDelete">Selected alarm delete karein</string>
    <string name="layoutAlarmsListDeleted">Alarm delete ho gaya hay. Ab aap alarms main menu main hay</string>
    <string name="layoutAlarmsListDeleteSelectError">Pehle alarm select kijiye</string>
    <string name="layoutAlarmsListOnResume">Ab aap alarm list menu par hay</string>
    <string name="layoutAlarmsDeleteSelected">Delete karne ke liye alarm select ho chuka hay.&#160;</string>
    <string name="layoutAlarmsDeleteDelete">Delete kar dein</string>
    <string name="layoutAlarmsDeleteOnResume">Ab aap delete alarm menu par hay</string>
    <string name="layoutVoiceRecorderList">Voice Record list karein</string>
    <string name="layoutVoiceRecorderCreate">Voice record create karein</string>
    <string name="layoutVoiceRecorderOnResume">Ab aap voice recorder menu par hayn</string>
    <string name="layoutVoiceRecorderOnResume2">Voice record save ho chuka hay aur aap voice record menu par hayn </string>
    <string name="layoutVoiceRecorderCreateCreate">Voice record create karein</string>
    <string name="layoutVoiceRecorderCreateCreate2">Voice recording. Recording shuru karne ke liye right side swipe karein aur band karne ke liye firse dahine side swipe karein</string>
    <string name="layoutVoiceRecorderCreateError">Error. Kripaya check karein ki aapke device me memory uplabdh hayn</string>
    <string name="layoutVoiceRecorderCreateOnResume">Ab aap voice record create karne ke menu mein hayn</string>
    <string name="layoutVoiceRecorderListList">Voice records</string>
    <string name="layoutVoiceRecorderListList2">Voice records. Records ko select karne ke liye right side swipe karein.</string>
    <string name="layoutVoiceRecorderListPlay">Voice record play karein</string>
    <string name="layoutVoiceRecorderListPlay2">Selected voice record play karein. Play karne ke liye right side slide karein aur band karne ke liye left side</string>
    <string name="layoutVoiceRecorderListDelete">Voice record delete karein</string>
    <string name="layoutVoiceRecorderListDelete2">Selected voice record delete karein</string>
    <string name="layoutVoiceRecorderListItem">Voice record&#160;</string>
    <string name="layoutVoiceRecorderListItemOf">&#160;of&#160;</string>
    <string name="layoutVoiceRecorderListNoVoiceRecords">Koi voice record uplabdh nahi hay</string>
    <string name="layoutVoiceRecorderListPleaseWait">Kripya thodi der baad parayaas kijiye</string>
    <string name="layoutVoiceRecorderListError">Pehele ek voice record select kijiye</string>
    <string name="layoutVoiceRecorderListOnResume">Ab aap voice record list menu par hay</string>
    <string name="layoutVoiceRecorderListOnResume2">Voice record delete ho gaya h, ab aap voice record list menu par hayn</string>
    <string name="layoutVoiceRecorderDeleteDelete">Delete karne ke liye voice record select ho chuka hay. Voice record&#160;</string>
    <string name="layoutVoiceRecorderDeleteDelete2">. Play karne ke left side slide karein aur stop karne ke liye left side.</string>
    <string name="layoutVoiceRecorderDeleteToDelete">Voice record&#160;</string>
    <string name="layoutVoiceRecorderDeleteConfirm">Confirm delete kar dein</string>
    <string name="layoutVoiceRecorderDeleteOnResume">Ab aap delete voice record menu par hay</string>
    <string name="layoutApplicationsList">Applications</string>
    <string name="layoutApplicationsList2">Applications. Sab application ko sunnee ke liye left ya right side slide karein.</string>
    <string name="layoutBrowserSearchInGoogle">Google me search karein</string>
    <string name="layoutBrowserListBookmarks">Bookmarks pe jayein</string>
    <string name="backToMainMenu">Main Menu pay wapis jayein</string>
</resources>