<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/dashboard" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="#ffb904"
  >

    
   <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
       
       <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
		<LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
			<ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/message"/>
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/messages" android:text="SMS"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/calls1" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/calls" android:text="@string/layoutMainCalls"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/contacts1"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/contacts" android:text="@string/layoutMainContacts"/>
        </LinearLayout>
       
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/internet1"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/browser" android:text="@string/layoutMainBrowser"/>
        </LinearLayout>
         <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
   
       </LinearLayout>

   
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>
		
    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/settings1"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/settings" android:text="@string/layoutMainSettings"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/status1"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/status" android:text="@string/layoutMainStatus"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
    </LinearLayout>
    
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="0.5"/>

</LinearLayout>
