<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/dashboard" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="#ffb904">

	<FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
		<LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
			<ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/google"/>
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/browsergoogle" android:text="@string/layoutBrowserSearchInGoogle" />
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/book"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/bookmarks" android:text="@string/layoutBrowserListBookmarks" />
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/goback"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/goback" android:text="@string/backToMainMenu" />
	    </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
	</LinearLayout>
    
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

</LinearLayout>
